--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <!-- Global css -->
     <link rel="stylesheet" href="/assets/css/global.css">
+    <!-- Pokedex css -->
+    <link rel="stylesheet" href="/assets/css/pokedex.css">
     
     <!-- Font Roboto -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,24 +22,132 @@
     <section class="content">
     <h1>Pokedex</h1>
     <ol class="pokemons">
-        <li>
-            Bulbasaur
+        <li class="pokemon">
+            <span class="number">#001</span>
+            <span class="name">Bulbasaur</span>
+            <div class="detail">
+                <ol class = "types">
+                    <li class="type" id="grass">Grass</li>
+                    <li class="type" id="poison">Poison</li>
+                </ol>
+            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt="Bulbasaur">
+            </div>
         </li>
-        <li>
-            Ivysaur
+        <li class="pokemon">
+            <span class="number">#002</span>
+            <span class="name">Ivysaur</span>
+            <div class="detail">
+                <ol class = "types">
+                    <li class="type"id="grass">Grass</li>
+                    <li class="type"id="poison">Poison</li>
+                </ol>
+            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/2.svg" alt="Ivysaur">
+        </div>
         </li>
-        <li>
-            Venusaur
+        <li class="pokemon">
+            <span class="number">#003</span>
+            <span class="name">Venosaur</span>
+            <div class="detail">
+                <ol class = "types">
+                    <li class="type"id="grass">Grass</li>
+                    <li class="type"id="poison">Poison</li>
+                </ol>
+            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/3.svg" alt="Venosaur">
+        </div>
         </li>
-        <li>
-            Charmander
-        </li>
-        <li>
-            Charmeleon
-        </li>
-        <li>
-            Charizard
-        </li>
+    </li>
+    <li class="pokemon">
+        <span class="number">#004</span>
+        <span class="name">Charmander</span>
+        <div class="detail">
+            <ol class = "types">
+                <li class="type"id="fire">Fire</li>
+            </ol>
+        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/4.svg" alt="Charmander">
+    </div>
+    </li>
+    <li class="pokemon">
+        <span class="number">#005</span>
+        <span class="name">Charmeleon</span>
+        <div class="detail">
+            <ol class = "types">
+                <li class="type"id="fire">Fire</li>
+            </ol>
+        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/5.svg" alt="Charmeleon">
+    </div>
+    </li>
+    <li class="pokemon">
+        <span class="number">#006</span>
+        <span class="name">Charizard</span>
+        <div class="detail">
+            <ol class = "types">
+                <li class="type"id="fire">Fire</li>
+                <li class="type"id="flying">Flying</li>
+            </ol>
+        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/6.svg" alt="Charizard">
+    </div>
+    </li>
+    <li class="pokemon">
+        <span class="number">#007</span>
+        <span class="name">Squirtle</span>
+        <div class="detail">
+            <ol class = "types">
+                <li class="type" id="water">Water</li>
+            </ol>
+        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/7.svg" alt="Squirtle">
+    </div>
+    </li>
+    <li class="pokemon">
+        <span class="number">#008</span>
+        <span class="name">Wartortle</span>
+        <div class="detail">
+            <ol class = "types">
+                <li class="type"id="water">Water</li>
+            </ol>
+        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/8.svg" alt="Wartortle">
+    </div>
+    </li>
+    <li class="pokemon">
+        <span class="number">#009</span>
+        <span class="name">Blastoise</span>
+        <div class="detail">
+            <ol class = "types">
+                <li class="type"id="water">Water</li>
+            </ol>
+        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/9.svg" alt="Blastoise">
+    </div>
+    </li>
+    <li class="pokemon">
+        <span class="number">#147</span>
+        <span class="name">Dratini</span>
+        <div class="detail">
+            <ol class = "types">
+                <li class="type"id="dragon">Dragon</li>
+            </ol>
+        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/147.svg" alt="Dratini">
+    </div>
+    </li>
+    <li class="pokemon">
+        <span class="number">#148</span>
+        <span class="name">Dragonair</span>
+        <div class="detail">
+            <ol class = "types">
+                <li class="type"id="dragon">Dragon</li>
+            </ol>
+        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/148.svg" alt="Dragonair">
+    </div>
+    </li>
+    <li class="pokemon">
+        <span class="number">#148</span>
+        <span class="name">Dragonite</span>
+        <div class="detail">
+            <ol class = "types">
+                <li class="type" id="dragon">Dragon</li>
+                <li class="type"id="flying">Flying</li>
+            </ol>
+        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/149.svg" alt="Dragonanite">
+    </div>
+    </li>
     </ol>
 </section>
 
